styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

:root {
    --primary-color: #155e75;
    --off-white: #F3F4F6;
    --dark-gray: #6b7280;
}

body {
    font-family: 'Montserrat', sans-serif;
    margin: 0px;
}

hr {
    margin: 2rem 0rem;
}

/* container */
.container {
    padding: 0.5rem 0.5rem;
}

.container-center {
    max-width: 900px;
    margin: auto;
    padding: 1rem;
}

/* links */
.link {
    box-sizing: border-box;
    text-decoration: none;
    padding: 0.5rem 1rem;
}

.link-primary {
    background-color: var(--primary-color);
    border-radius: 0.5rem;
    padding: 0.66rem;
    color: white;
    margin: 1rem 0.5rem;
}

.link-secondary {
    color: var(--primary-color);
    border-radius: 0.5rem;
    border: 1px solid var(--primary-color);
    margin: 1rem 0.5rem;
}

/* lists */

.list{
    text-align: center;
    margin: 1rem;
}

.list-non-bullet {
    list-style: none;
}

.list-item-inline {
    display: inline;
    padding: 0rem 0.5rem;
}

/* Nav */

.navigation {
    background-color: var(--primary-color);
    color: white;
    padding: 1rem;
    border-bottom-left-radius: 1rem;
}

.navigation .nav-brand {
    font-weight: bold;
    font-size: 1.1rem;
}

.navigation .nav-pills {
    text-align: right;
}

.navigation .link {
    color: white;
}

.navigation .link-active {
    font-weight: bold;
}

/* header */
.hero {
    padding: 1rem;
    padding-top: 2rem;
}

.hero .hero-img {
    max-width: 350px;
    display: block;
    margin: auto;
}

.hero .hero-heading {
    font-size: 2.5rem;
    padding-top: 1rem;
    text-align: center;
    color: var(--dark-gray);
}

/* section */

.section {
    padding: 2rem;
}

.section h1 {
    text-align: center;
}

.ow {
    background-color: var(--off-white);
}

/* Footer */

.footer {
    background-color: var(--primary-color);
    padding: 2rem 0rem;
    color: white;
    text-align: center;
    border-top-right-radius: 1rem;
}

.footer .link {
    color: white;
}

.footer .footer-header {
    font-weight: bold;
    font-size: large;
}


.footer ul {
    padding-inline-start: 0px;
}

